deployments/pathweb/workloads/media-services/overseerr/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: overseerr
  namespace: media-services
  labels:
    app.kubernetes.io/name: overseerr
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: overseerr
  serviceName: overseerr-headless
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: overseerr
    spec:
      runtimeClassName: "gvisor"
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        runAsNonRoot: true
      containers:
      - name: seerr
        image: ghcr.io/seerr-team/seerr:latest
        ports:
        - containerPort: 5055
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop: ["ALL"]
          readOnlyRootFilesystem: true
        # startupProbe:
        #   httpGet:
        #     path: /api/v1/status
        #     port: 5055
        #   periodSeconds: 3
        #   failureThreshold: 20
        # livenessProbe:
        #   httpGet:
        #     path: /api/v1/status
        #     port: 5055
        #   periodSeconds: 60
        volumeMounts:
        - name: config
          mountPath: /app/config
        resources:
          requests:
            cpu: "100m"
            memory: "300Mi"
          limits:
            cpu: "500m"
            memory: "1Gi"
  volumeClaimTemplates:
  - metadata:
      name: config
      labels:
        home.yrf.me/backup-to-okinawa-s3: "true"
    spec:
      accessModes: ["ReadWriteOnce"]
      resources:
        requests:
          storage: 1Gi
