deployments/pathweb/workloads/media-services/overseerr/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: overseerr
  labels:
    app.kubernetes.io/name: overseerr
    external-dns: local-pdns
spec:
  parentRefs:
  - name: rfhome-services-gateway
    namespace: home-network
    sectionName: https
    kind: Gateway
  hostnames:
  - overseerr.services.home.yrf.me
  rules:
  - backendRefs:
    - name: overseerr-headless
      port: 5055
